Exclude calling of enable/disable consumers from syncronized block to avoid deadlocks if a consumer is blocking on a different thread